--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- hide page content until loader/holo sequence finishes -->
-    <style>body.preload{visibility:hidden !important;}</style>
+    <style>
+    body.preload{visibility:hidden !important;}
+    /* keep loader visible during preload state */
+    body.preload #loader{visibility:visible !important;}
+</style>
     <meta name="description" content="Portfolio of Yao Xiang, Computer Engineering student at NUS specializing in AI, hardware, and software development.">
     <meta name="keywords" content="Yao Xiang, Computer Engineering, NUS, AI, Python, JavaScript, Verilog, Arduino, Helper Tools, Wingman">
     <title>Yao Xiang - Computer Engineering Student</title>
